--- a/html/astrologia.html
+++ b/html/astrologia.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrologia - Constelar</title>
+    <title>Astrologia</title>
     <meta name="description" content="Mergulho interior baseado na sua data, hora e local de nascimento com a Constelar.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
@@ -18,7 +17,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="assets/images/logotipo.png" alt="Constelar" class="logo">
+                    <img src="../assets/images/logotipo.png" alt="" class="logo">
                     <span class="logo-text"></span>
                 </div>
                 <ul class="nav-menu">
@@ -32,7 +31,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/astrologia.jpg" alt="Astrologia" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
@@ -287,7 +286,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
+                        <img src="../assets/images/logotipo.png" alt="" class="logo">
                         <span class="logo-text">Constelar</span>
                     </div>
                     <p class="footer-description">Desenvolvimento Humano através de metodologias ativas e autoconhecimento.</p>
