--- a/html/coaching.html
+++ b/html/coaching.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Reiki</title>
-    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.">
+    <title>Coaching e Mentoria</title>
+    <meta name="description" content="Transformação com propósito e presença através de processos personalizados de coaching e mentoria.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -42,13 +42,13 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/reiki_1.jpg" alt="Reiki" class="hero-bg-image">
+            <img src="../assets/images/coaching_1.jpg" alt="Coaching e Mentoria" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
-                <div class="service-icon-large">🧘</div>
-                <h1 class="service-hero-title">Curso de Reiki</h1>
-                <p class="service-hero-subtitle">Aprenda a técnica milenar de cura energética e autoconhecimento</p>
+                <div class="service-icon-large">🎯</div>
+                <h1 class="service-hero-title">Coaching e Mentoria</h1>
+                <p class="service-hero-subtitle">Transformação com propósito e presença através de processos personalizados</p>
                 <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary">Adquirir Agora</a>
             </div>
         </div>
@@ -59,71 +59,71 @@
         <div class="container">
             <div class="service-content">
                 <div class="service-description">
-                    <h2>O que é o Reiki?</h2>
+                    <h2>Coaching e Mentoria Transformacional</h2>
                     <p>
-                        O Reiki é uma técnica japonesa de cura energética que promove o relaxamento, reduz o estresse e facilita a cura através da imposição das mãos. Esta prática milenar trabalha com a energia vital universal, ajudando a equilibrar os centros energéticos do corpo e promovendo o bem-estar físico, mental e espiritual.
+                        O processo de coaching e mentoria é uma jornada personalizada de autoconhecimento e desenvolvimento que combina técnicas comprovadas de coaching comportamental com a sabedoria da mentoria experiente. Através de sessões estruturadas e ferramentas específicas, você descobrirá seu potencial único e desenvolverá as competências necessárias para alcançar seus objetivos com propósito e presença.
                     </p>
                     
-                    <h3>O que você vai aprender:</h3>
+                    <h3>O que você vai vivenciar:</h3>
                     <div class="benefits-grid">
                         <div class="benefit-item">
+                            <div class="benefit-icon">🎯</div>
+                            <h4>Definição de Objetivos</h4>
+                            <p>Clareza sobre seus propósitos e metas de vida</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">🧭</div>
+                            <h4>Autoconhecimento Profundo</h4>
+                            <p>Descoberta de talentos, valores e crenças limitantes</p>
+                        </div>
+                        <div class="benefit-item">
                             <div class="benefit-icon">⚡</div>
-                            <h4>Fundamentos do Reiki</h4>
-                            <p>História, princípios e filosofia da técnica</p>
+                            <h4>Plano de Ação</h4>
+                            <p>Estratégias práticas para alcançar seus objetivos</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🙏</div>
-                            <h4>Técnicas de Aplicação</h4>
-                            <p>Posições das mãos e métodos de canalização</p>
+                            <div class="benefit-icon">🌱</div>
+                            <h4>Desenvolvimento de Competências</h4>
+                            <p>Fortalecimento de habilidades pessoais e profissionais</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🌟</div>
-                            <h4>Autoaplicação</h4>
-                            <p>Como aplicar Reiki em si mesmo</p>
+                            <div class="benefit-icon">🔄</div>
+                            <h4>Transformação de Padrões</h4>
+                            <p>Mudança de comportamentos que não servem mais</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">💫</div>
-                            <h4>Aplicação em Outros</h4>
-                            <p>Técnicas para ajudar familiares e amigos</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">🧘‍♀️</div>
-                            <h4>Meditação e Centramento</h4>
-                            <p>Práticas para fortalecer a conexão energética</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">📜</div>
-                            <h4>Certificação</h4>
-                            <p>Certificado de conclusão do curso</p>
+                            <div class="benefit-icon">🎪</div>
+                            <h4>Equilíbrio Vida-Trabalho</h4>
+                            <p>Harmonia entre diferentes áreas da vida</p>
                         </div>
                     </div>
 
-                    <h3>Benefícios do Reiki:</h3>
+                    <h3>Benefícios do Processo:</h3>
                     <ul class="benefits-list">
-                        <li>Redução do estresse e ansiedade</li>
-                        <li>Melhora da qualidade do sono</li>
-                        <li>Alívio de dores e tensões</li>
-                        <li>Fortalecimento do sistema imunológico</li>
-                        <li>Equilíbrio emocional</li>
-                        <li>Desenvolvimento da intuição</li>
-                        <li>Maior conexão espiritual</li>
-                        <li>Autoconhecimento profundo</li>
+                        <li>Maior clareza sobre propósito de vida</li>
+                        <li>Desenvolvimento da inteligência emocional</li>
+                        <li>Melhoria na tomada de decisões</li>
+                        <li>Aumento da autoconfiança e autoestima</li>
+                        <li>Melhor gestão do tempo e prioridades</li>
+                        <li>Desenvolvimento de liderança pessoal</li>
+                        <li>Melhoria nos relacionamentos</li>
+                        <li>Alcance de resultados sustentáveis</li>
                     </ul>
 
                     <div class="course-info">
-                        <h3>Informações do Curso:</h3>
+                        <h3>Informações do Processo:</h3>
                         <div class="info-grid">
                             <div class="info-item">
                                 <strong>Modalidade:</strong> Presencial e Online
                             </div>
                             <div class="info-item">
-                                <strong>Duração:</strong> Consulte agenda
+                                <strong>Duração:</strong> Personalizada
                             </div>
                             <div class="info-item">
-                                <strong>Material:</strong> Apostila inclusa
+                                <strong>Sessões:</strong> Individuais
                             </div>
                             <div class="info-item">
-                                <strong>Certificado:</strong> Sim
+                                <strong>Acompanhamento:</strong> Contínuo
                             </div>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
 
                 <div class="service-sidebar">
                     <div class="purchase-card">
-                        <h3>Adquira seu Curso</h3>
-                        <p>Inicie sua jornada de cura e autoconhecimento através do Reiki</p>
+                        <h3>Inicie sua Transformação</h3>
+                        <p>Descubra seu potencial e transforme sua vida com propósito</p>
                         <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary btn-full">Adquirir Agora</a>
                         <div class="contact-info">
                             <p>Dúvidas? Entre em contato:</p>
@@ -143,12 +143,12 @@
                     </div>
 
                     <div class="instructor-card">
-                        <h3>Seu Instrutor</h3>
+                        <h3>Seu Coach e Mentor</h3>
                         <div class="instructor-info">
                             <div class="instructor-avatar"></div>
                             <div class="instructor-details">
                                 <h4>Marcos Eduardo</h4>
-                                <p>Especialista em desenvolvimento humano com mais de 28 anos de experiência</p>
+                                <p>Coach comportamental com mais de 28 anos de experiência em desenvolvimento humano</p>
                             </div>
                         </div>
                     </div>
@@ -162,20 +162,20 @@
         <div class="container">
             <h2>Outros Serviços</h2>
             <div class="related-grid">
-                <a href="mandala.html" class="related-card">
-                    <div class="related-icon">🌸</div>
-                    <h3>Mandala Terapêutica</h3>
-                    <p>Terapia através de mandalas sagradas</p>
+                <a href="desenvolvimento.html" class="related-card">
+                    <div class="related-icon">👥</div>
+                    <h3>Desenvolvimento de Lideranças</h3>
+                    <p>Líderes conscientes para o futuro</p>
                 </a>
-                <a href="jornada.html" class="related-card">
-                    <div class="related-icon">🌙</div>
-                    <h3>Jornada da Alma</h3>
-                    <p>Autoconhecimento através do Maha Lilah</p>
+                <a href="disc.html" class="related-card">
+                    <div class="related-icon">📊</div>
+                    <h3>Perfil Comportamental DISC</h3>
+                    <p>Análise completa do seu perfil</p>
                 </a>
-                <a href="astrologia.html" class="related-card">
-                    <div class="related-icon">⭐</div>
-                    <h3>Astrologia</h3>
-                    <p>Mergulho interior através dos astros</p>
+                <a href="comunicacao.html" class="related-card">
+                    <div class="related-icon">💬</div>
+                    <h3>Comunicação Assertiva</h3>
+                    <p>Praticando a escuta empática</p>
                 </a>
             </div>
         </div>
@@ -201,4 +201,3 @@
     <script src="../js/whatsapp-widget.js"></script>
 </body>
 </html>
-
