--- a/html/comunicacao.html
+++ b/html/comunicacao.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Reiki</title>
-    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.">
+    <title>Workshop Comunicação Assertiva e Não Violenta</title>
+    <meta name="description" content="Praticando a escuta empática e comunicação consciente para relacionamentos mais saudáveis e eficazes.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -42,13 +42,13 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/reiki_1.jpg" alt="Reiki" class="hero-bg-image">
+            <img src="../assets/images/perfil_comportamental.jpg" alt="Comunicação Assertiva" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
-                <div class="service-icon-large">🧘</div>
-                <h1 class="service-hero-title">Curso de Reiki</h1>
-                <p class="service-hero-subtitle">Aprenda a técnica milenar de cura energética e autoconhecimento</p>
+                <div class="service-icon-large">💬</div>
+                <h1 class="service-hero-title">Workshop Comunicação Assertiva e Não Violenta</h1>
+                <p class="service-hero-subtitle">Praticando a escuta empática e comunicação consciente</p>
                 <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary">Adquirir Agora</a>
             </div>
         </div>
@@ -59,68 +59,80 @@
         <div class="container">
             <div class="service-content">
                 <div class="service-description">
-                    <h2>O que é o Reiki?</h2>
+                    <h2>Comunicação Assertiva e Não Violenta</h2>
                     <p>
-                        O Reiki é uma técnica japonesa de cura energética que promove o relaxamento, reduz o estresse e facilita a cura através da imposição das mãos. Esta prática milenar trabalha com a energia vital universal, ajudando a equilibrar os centros energéticos do corpo e promovendo o bem-estar físico, mental e espiritual.
+                        O Workshop de Comunicação Assertiva e Não Violenta é uma jornada transformadora que ensina as habilidades essenciais para uma comunicação consciente, empática e eficaz. Baseado nos princípios da Comunicação Não Violenta (CNV) desenvolvida por Marshall Rosenberg, este workshop oferece ferramentas práticas para expressar necessidades, ouvir com empatia e resolver conflitos de forma construtiva. Você aprenderá a se comunicar de maneira autêntica, respeitosa e conectada, transformando seus relacionamentos pessoais e profissionais.
                     </p>
                     
-                    <h3>O que você vai aprender:</h3>
+                    <h3>Os 4 Pilares da CNV:</h3>
                     <div class="benefits-grid">
                         <div class="benefit-item">
-                            <div class="benefit-icon">⚡</div>
-                            <h4>Fundamentos do Reiki</h4>
-                            <p>História, princípios e filosofia da técnica</p>
+                            <div class="benefit-icon">👁️</div>
+                            <h4>Observação</h4>
+                            <p>Observar sem avaliar ou julgar os fatos</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">❤️</div>
+                            <h4>Sentimentos</h4>
+                            <p>Identificar e expressar emoções de forma clara</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">🎯</div>
+                            <h4>Necessidades</h4>
+                            <p>Reconhecer e comunicar necessidades universais</p>
                         </div>
                         <div class="benefit-item">
                             <div class="benefit-icon">🙏</div>
-                            <h4>Técnicas de Aplicação</h4>
-                            <p>Posições das mãos e métodos de canalização</p>
+                            <h4>Pedidos</h4>
+                            <p>Fazer solicitações específicas e realizáveis</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🌟</div>
-                            <h4>Autoaplicação</h4>
-                            <p>Como aplicar Reiki em si mesmo</p>
+                            <div class="benefit-icon">👂</div>
+                            <h4>Escuta Empática</h4>
+                            <p>Ouvir com presença e compreensão profunda</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">💫</div>
-                            <h4>Aplicação em Outros</h4>
-                            <p>Técnicas para ajudar familiares e amigos</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">🧘‍♀️</div>
-                            <h4>Meditação e Centramento</h4>
-                            <p>Práticas para fortalecer a conexão energética</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">📜</div>
-                            <h4>Certificação</h4>
-                            <p>Certificado de conclusão do curso</p>
+                            <div class="benefit-icon">🤝</div>
+                            <h4>Conexão Autêntica</h4>
+                            <p>Criar vínculos genuínos e duradouros</p>
                         </div>
                     </div>
 
-                    <h3>Benefícios do Reiki:</h3>
+                    <h3>O que você vai aprender:</h3>
                     <ul class="benefits-list">
-                        <li>Redução do estresse e ansiedade</li>
-                        <li>Melhora da qualidade do sono</li>
-                        <li>Alívio de dores e tensões</li>
-                        <li>Fortalecimento do sistema imunológico</li>
-                        <li>Equilíbrio emocional</li>
-                        <li>Desenvolvimento da intuição</li>
-                        <li>Maior conexão espiritual</li>
-                        <li>Autoconhecimento profundo</li>
+                        <li>Princípios fundamentais da Comunicação Não Violenta</li>
+                        <li>Técnicas de escuta empática e presença</li>
+                        <li>Como expressar sentimentos e necessidades</li>
+                        <li>Estratégias para lidar com conflitos</li>
+                        <li>Desenvolvimento da inteligência emocional</li>
+                        <li>Comunicação assertiva sem agressividade</li>
+                        <li>Práticas de autocompaixão e empatia</li>
+                        <li>Ferramentas para relacionamentos saudáveis</li>
+                    </ul>
+
+                    <h3>Benefícios do Workshop:</h3>
+                    <ul class="benefits-list">
+                        <li>Melhoria significativa nos relacionamentos</li>
+                        <li>Redução de conflitos e mal-entendidos</li>
+                        <li>Aumento da autoconfiança na comunicação</li>
+                        <li>Desenvolvimento de liderança empática</li>
+                        <li>Melhoria no ambiente de trabalho</li>
+                        <li>Fortalecimento de vínculos familiares</li>
+                        <li>Redução do estresse interpessoal</li>
+                        <li>Maior satisfação nos relacionamentos</li>
                     </ul>
 
                     <div class="course-info">
-                        <h3>Informações do Curso:</h3>
+                        <h3>Informações do Workshop:</h3>
                         <div class="info-grid">
                             <div class="info-item">
                                 <strong>Modalidade:</strong> Presencial e Online
                             </div>
                             <div class="info-item">
-                                <strong>Duração:</strong> Consulte agenda
+                                <strong>Duração:</strong> 8 horas (1 dia)
                             </div>
                             <div class="info-item">
-                                <strong>Material:</strong> Apostila inclusa
+                                <strong>Formato:</strong> Teórico e Prático
                             </div>
                             <div class="info-item">
                                 <strong>Certificado:</strong> Sim
@@ -131,8 +143,8 @@
 
                 <div class="service-sidebar">
                     <div class="purchase-card">
-                        <h3>Adquira seu Curso</h3>
-                        <p>Inicie sua jornada de cura e autoconhecimento através do Reiki</p>
+                        <h3>Transforme sua Comunicação</h3>
+                        <p>Desenvolva habilidades para relacionamentos mais saudáveis e eficazes</p>
                         <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary btn-full">Adquirir Agora</a>
                         <div class="contact-info">
                             <p>Dúvidas? Entre em contato:</p>
@@ -143,12 +155,12 @@
                     </div>
 
                     <div class="instructor-card">
-                        <h3>Seu Instrutor</h3>
+                        <h3>Seu Facilitador</h3>
                         <div class="instructor-info">
                             <div class="instructor-avatar"></div>
                             <div class="instructor-details">
                                 <h4>Marcos Eduardo</h4>
-                                <p>Especialista em desenvolvimento humano com mais de 28 anos de experiência</p>
+                                <p>Especialista em Comunicação Não Violenta com mais de 28 anos de experiência</p>
                             </div>
                         </div>
                     </div>
@@ -162,20 +174,20 @@
         <div class="container">
             <h2>Outros Serviços</h2>
             <div class="related-grid">
-                <a href="mandala.html" class="related-card">
-                    <div class="related-icon">🌸</div>
-                    <h3>Mandala Terapêutica</h3>
-                    <p>Terapia através de mandalas sagradas</p>
+                <a href="coaching.html" class="related-card">
+                    <div class="related-icon">🎯</div>
+                    <h3>Coaching e Mentoria</h3>
+                    <p>Transformação com propósito</p>
                 </a>
-                <a href="jornada.html" class="related-card">
-                    <div class="related-icon">🌙</div>
-                    <h3>Jornada da Alma</h3>
-                    <p>Autoconhecimento através do Maha Lilah</p>
+                <a href="desenvolvimento.html" class="related-card">
+                    <div class="related-icon">👥</div>
+                    <h3>Desenvolvimento de Lideranças</h3>
+                    <p>Líderes conscientes para o futuro</p>
                 </a>
-                <a href="astrologia.html" class="related-card">
-                    <div class="related-icon">⭐</div>
-                    <h3>Astrologia</h3>
-                    <p>Mergulho interior através dos astros</p>
+                <a href="disc.html" class="related-card">
+                    <div class="related-icon">📊</div>
+                    <h3>Perfil Comportamental DISC</h3>
+                    <p>Análise completa do seu perfil</p>
                 </a>
             </div>
         </div>
@@ -201,4 +213,3 @@
     <script src="../js/whatsapp-widget.js"></script>
 </body>
 </html>
-
