--- a/html/desenvolvimento.html
+++ b/html/desenvolvimento.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Reiki</title>
-    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.">
+    <title>Programa de Desenvolvimento de Lideranças</title>
+    <meta name="description" content="Líderes conscientes para um futuro colaborativo e sustentável através de metodologias inovadoras.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -42,13 +42,13 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/reiki_1.jpg" alt="Reiki" class="hero-bg-image">
+            <img src="../assets/images/desenvolvimento_pessoal_1.jpg" alt="Desenvolvimento de Lideranças" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
-                <div class="service-icon-large">🧘</div>
-                <h1 class="service-hero-title">Curso de Reiki</h1>
-                <p class="service-hero-subtitle">Aprenda a técnica milenar de cura energética e autoconhecimento</p>
+                <div class="service-icon-large">👥</div>
+                <h1 class="service-hero-title">Programa de Desenvolvimento de Lideranças</h1>
+                <p class="service-hero-subtitle">Líderes conscientes para um futuro colaborativo e sustentável</p>
                 <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary">Adquirir Agora</a>
             </div>
         </div>
@@ -59,68 +59,68 @@
         <div class="container">
             <div class="service-content">
                 <div class="service-description">
-                    <h2>O que é o Reiki?</h2>
+                    <h2>Desenvolvendo Líderes Conscientes</h2>
                     <p>
-                        O Reiki é uma técnica japonesa de cura energética que promove o relaxamento, reduz o estresse e facilita a cura através da imposição das mãos. Esta prática milenar trabalha com a energia vital universal, ajudando a equilibrar os centros energéticos do corpo e promovendo o bem-estar físico, mental e espiritual.
+                        O Programa de Desenvolvimento de Lideranças é uma jornada transformadora que prepara líderes conscientes para os desafios do futuro. Através de metodologias inovadoras e práticas integrativas, desenvolvemos competências essenciais para uma liderança autêntica, colaborativa e sustentável. O programa combina autoconhecimento, inteligência emocional e habilidades práticas de gestão para formar líderes que inspiram e transformam organizações.
                     </p>
                     
-                    <h3>O que você vai aprender:</h3>
+                    <h3>Módulos do Programa:</h3>
                     <div class="benefits-grid">
                         <div class="benefit-item">
+                            <div class="benefit-icon">🧭</div>
+                            <h4>Liderança Consciente</h4>
+                            <p>Autoconhecimento e propósito na liderança</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">🤝</div>
+                            <h4>Comunicação Eficaz</h4>
+                            <p>Técnicas de comunicação assertiva e empática</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">🎯</div>
+                            <h4>Gestão de Equipes</h4>
+                            <p>Motivação, engajamento e desenvolvimento de talentos</p>
+                        </div>
+                        <div class="benefit-item">
                             <div class="benefit-icon">⚡</div>
-                            <h4>Fundamentos do Reiki</h4>
-                            <p>História, princípios e filosofia da técnica</p>
+                            <h4>Tomada de Decisão</h4>
+                            <p>Processos decisórios conscientes e estratégicos</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🙏</div>
-                            <h4>Técnicas de Aplicação</h4>
-                            <p>Posições das mãos e métodos de canalização</p>
+                            <div class="benefit-icon">🌱</div>
+                            <h4>Liderança Sustentável</h4>
+                            <p>Práticas de liderança responsável e ética</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🌟</div>
-                            <h4>Autoaplicação</h4>
-                            <p>Como aplicar Reiki em si mesmo</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">💫</div>
-                            <h4>Aplicação em Outros</h4>
-                            <p>Técnicas para ajudar familiares e amigos</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">🧘‍♀️</div>
-                            <h4>Meditação e Centramento</h4>
-                            <p>Práticas para fortalecer a conexão energética</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">📜</div>
-                            <h4>Certificação</h4>
-                            <p>Certificado de conclusão do curso</p>
+                            <div class="benefit-icon">🔄</div>
+                            <h4>Gestão de Mudanças</h4>
+                            <p>Condução de transformações organizacionais</p>
                         </div>
                     </div>
 
-                    <h3>Benefícios do Reiki:</h3>
+                    <h3>Competências Desenvolvidas:</h3>
                     <ul class="benefits-list">
-                        <li>Redução do estresse e ansiedade</li>
-                        <li>Melhora da qualidade do sono</li>
-                        <li>Alívio de dores e tensões</li>
-                        <li>Fortalecimento do sistema imunológico</li>
-                        <li>Equilíbrio emocional</li>
-                        <li>Desenvolvimento da intuição</li>
-                        <li>Maior conexão espiritual</li>
-                        <li>Autoconhecimento profundo</li>
+                        <li>Inteligência emocional e social</li>
+                        <li>Comunicação assertiva e não violenta</li>
+                        <li>Gestão de conflitos e mediação</li>
+                        <li>Pensamento estratégico e sistêmico</li>
+                        <li>Liderança colaborativa e inclusiva</li>
+                        <li>Capacidade de inspirar e motivar</li>
+                        <li>Gestão do tempo e prioridades</li>
+                        <li>Resiliência e adaptabilidade</li>
                     </ul>
 
                     <div class="course-info">
-                        <h3>Informações do Curso:</h3>
+                        <h3>Informações do Programa:</h3>
                         <div class="info-grid">
                             <div class="info-item">
                                 <strong>Modalidade:</strong> Presencial e Online
                             </div>
                             <div class="info-item">
-                                <strong>Duração:</strong> Consulte agenda
+                                <strong>Duração:</strong> 6 meses
                             </div>
                             <div class="info-item">
-                                <strong>Material:</strong> Apostila inclusa
+                                <strong>Formato:</strong> Workshops e Mentoria
                             </div>
                             <div class="info-item">
                                 <strong>Certificado:</strong> Sim
@@ -131,8 +131,8 @@
 
                 <div class="service-sidebar">
                     <div class="purchase-card">
-                        <h3>Adquira seu Curso</h3>
-                        <p>Inicie sua jornada de cura e autoconhecimento através do Reiki</p>
+                        <h3>Desenvolva sua Liderança</h3>
+                        <p>Torne-se um líder consciente e transformador</p>
                         <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary btn-full">Adquirir Agora</a>
                         <div class="contact-info">
                             <p>Dúvidas? Entre em contato:</p>
@@ -143,12 +143,12 @@
                     </div>
 
                     <div class="instructor-card">
-                        <h3>Seu Instrutor</h3>
+                        <h3>Seu Facilitador</h3>
                         <div class="instructor-info">
                             <div class="instructor-avatar"></div>
                             <div class="instructor-details">
                                 <h4>Marcos Eduardo</h4>
-                                <p>Especialista em desenvolvimento humano com mais de 28 anos de experiência</p>
+                                <p>Especialista em desenvolvimento de lideranças com mais de 28 anos de experiência</p>
                             </div>
                         </div>
                     </div>
@@ -162,20 +162,20 @@
         <div class="container">
             <h2>Outros Serviços</h2>
             <div class="related-grid">
-                <a href="mandala.html" class="related-card">
-                    <div class="related-icon">🌸</div>
-                    <h3>Mandala Terapêutica</h3>
-                    <p>Terapia através de mandalas sagradas</p>
+                <a href="coaching.html" class="related-card">
+                    <div class="related-icon">🎯</div>
+                    <h3>Coaching e Mentoria</h3>
+                    <p>Transformação com propósito</p>
                 </a>
-                <a href="jornada.html" class="related-card">
-                    <div class="related-icon">🌙</div>
-                    <h3>Jornada da Alma</h3>
-                    <p>Autoconhecimento através do Maha Lilah</p>
+                <a href="comunicacao.html" class="related-card">
+                    <div class="related-icon">💬</div>
+                    <h3>Comunicação Assertiva</h3>
+                    <p>Praticando a escuta empática</p>
                 </a>
-                <a href="astrologia.html" class="related-card">
-                    <div class="related-icon">⭐</div>
-                    <h3>Astrologia</h3>
-                    <p>Mergulho interior através dos astros</p>
+                <a href="lego.html" class="related-card">
+                    <div class="related-icon">🧩</div>
+                    <h3>Lego Serious Play</h3>
+                    <p>Metodologia criativa e inovadora</p>
                 </a>
             </div>
         </div>
@@ -201,4 +201,3 @@
     <script src="../js/whatsapp-widget.js"></script>
 </body>
 </html>
-
