--- a/html/dragon.html
+++ b/html/dragon.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dragon Coaching - Constelar</title>
-    <meta name="description" content="Concrie a sua vida através do poderoso método Dragon Coaching com a Constelar.">
+    <title>Dragon Coaching</title>
+    <meta name="description" content="Concrie a sua vida através do poderoso método Dragon Coaching.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -20,8 +19,8 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="../index.html">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                        <span class="logo-text">Constelar</span>
+                        <img src="../assets/images/logotipo.png" alt="" class="logo">
+                        <span class="logo-text"></span>
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -44,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/dragon_coaching.jpg" alt="Dragon Coaching" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
@@ -259,8 +258,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="../assets/images/logotipo.png" alt="Constelar" class="logo">
-                        <span class="logo-text">Constelar</span>
+                        <img src="../assets/images/logotipo.png" alt="" class="logo">
+                        <span class="logo-text"></span>
                     </div>
                     <p class="footer-description">Desenvolvimento Humano através de metodologias ativas e autoconhecimento.</p>
                 </div>
