--- a/html/lego.html
+++ b/html/lego.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Reiki</title>
-    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.">
+    <title>Metodologia Lego Serious Play Methods</title>
+    <meta name="description" content="Desenvolvendo e engajando pessoas de forma criativa e inovadora através da metodologia Lego Serious Play.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -42,13 +42,13 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/reiki_1.jpg" alt="Reiki" class="hero-bg-image">
+            <img src="../assets/images/lideranca_novos_lideres.jpg" alt="Lego Serious Play" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
-                <div class="service-icon-large">🧘</div>
-                <h1 class="service-hero-title">Curso de Reiki</h1>
-                <p class="service-hero-subtitle">Aprenda a técnica milenar de cura energética e autoconhecimento</p>
+                <div class="service-icon-large">🧩</div>
+                <h1 class="service-hero-title">Metodologia Lego Serious Play Methods</h1>
+                <p class="service-hero-subtitle">Desenvolvendo e engajando pessoas de forma criativa e inovadora</p>
                 <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary">Adquirir Agora</a>
             </div>
         </div>
@@ -59,71 +59,83 @@
         <div class="container">
             <div class="service-content">
                 <div class="service-description">
-                    <h2>O que é o Reiki?</h2>
+                    <h2>Lego Serious Play Methods</h2>
                     <p>
-                        O Reiki é uma técnica japonesa de cura energética que promove o relaxamento, reduz o estresse e facilita a cura através da imposição das mãos. Esta prática milenar trabalha com a energia vital universal, ajudando a equilibrar os centros energéticos do corpo e promovendo o bem-estar físico, mental e espiritual.
+                        A metodologia Lego Serious Play é uma ferramenta poderosa que combina estilos de aprendizagem visual, auditivo e cinestésico em uma única abordagem criativa. Esta técnica inovadora apoia pessoas a pensarem com as mãos e comunicarem melhor suas ideias, permitindo um maior fluxo de informações e insights profundos. Através da construção com peças Lego, os participantes exploram conceitos complexos, desenvolvem soluções criativas e fortalecem a colaboração em equipe.
                     </p>
                     
-                    <h3>O que você vai aprender:</h3>
+                    <h3>Aplicações da Metodologia:</h3>
                     <div class="benefits-grid">
                         <div class="benefit-item">
-                            <div class="benefit-icon">⚡</div>
-                            <h4>Fundamentos do Reiki</h4>
-                            <p>História, princípios e filosofia da técnica</p>
+                            <div class="benefit-icon">👥</div>
+                            <h4>Desenvolvimento de Equipe</h4>
+                            <p>Fortalecimento da colaboração e comunicação</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🙏</div>
-                            <h4>Técnicas de Aplicação</h4>
-                            <p>Posições das mãos e métodos de canalização</p>
+                            <div class="benefit-icon">🔄</div>
+                            <h4>Gestão de Mudança</h4>
+                            <p>Facilitação de processos de transformação</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🌟</div>
-                            <h4>Autoaplicação</h4>
-                            <p>Como aplicar Reiki em si mesmo</p>
+                            <div class="benefit-icon">💡</div>
+                            <h4>Inovação</h4>
+                            <p>Desenvolvimento de produtos e serviços criativos</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">💫</div>
-                            <h4>Aplicação em Outros</h4>
-                            <p>Técnicas para ajudar familiares e amigos</p>
+                            <div class="benefit-icon">📋</div>
+                            <h4>Gerenciamento de Projetos</h4>
+                            <p>Planejamento visual e colaborativo</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🧘‍♀️</div>
-                            <h4>Meditação e Centramento</h4>
-                            <p>Práticas para fortalecer a conexão energética</p>
+                            <div class="benefit-icon">🚀</div>
+                            <h4>Startups de Negócios</h4>
+                            <p>Modelagem de ideias e conceitos</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">📜</div>
-                            <h4>Certificação</h4>
-                            <p>Certificado de conclusão do curso</p>
+                            <div class="benefit-icon">🎯</div>
+                            <h4>Coaching e Liderança</h4>
+                            <p>Desenvolvimento de competências de liderança</p>
                         </div>
                     </div>
 
-                    <h3>Benefícios do Reiki:</h3>
+                    <h3>Mais Aplicações:</h3>
                     <ul class="benefits-list">
-                        <li>Redução do estresse e ansiedade</li>
-                        <li>Melhora da qualidade do sono</li>
-                        <li>Alívio de dores e tensões</li>
-                        <li>Fortalecimento do sistema imunológico</li>
-                        <li>Equilíbrio emocional</li>
-                        <li>Desenvolvimento da intuição</li>
-                        <li>Maior conexão espiritual</li>
-                        <li>Autoconhecimento profundo</li>
+                        <li>Gestão de Conflitos e mediação</li>
+                        <li>Estratégia Organizacional</li>
+                        <li>Estratégia de Comunicação</li>
+                        <li>Solução criativa de problemas</li>
+                        <li>Planejamento estratégico</li>
+                        <li>Desenvolvimento de visão compartilhada</li>
+                        <li>Melhoria de processos</li>
+                        <li>Construção de identidade organizacional</li>
+                    </ul>
+
+                    <h3>Benefícios da Metodologia:</h3>
+                    <ul class="benefits-list">
+                        <li>Engajamento de 100% dos participantes</li>
+                        <li>Comunicação mais eficaz de ideias complexas</li>
+                        <li>Desenvolvimento do pensamento sistêmico</li>
+                        <li>Estímulo à criatividade e inovação</li>
+                        <li>Melhoria na tomada de decisões em grupo</li>
+                        <li>Fortalecimento da confiança na equipe</li>
+                        <li>Aprendizagem experiencial profunda</li>
+                        <li>Resultados tangíveis e duradouros</li>
                     </ul>
 
                     <div class="course-info">
-                        <h3>Informações do Curso:</h3>
+                        <h3>Informações do Workshop:</h3>
                         <div class="info-grid">
                             <div class="info-item">
-                                <strong>Modalidade:</strong> Presencial e Online
+                                <strong>Modalidade:</strong> Presencial
                             </div>
                             <div class="info-item">
-                                <strong>Duração:</strong> Consulte agenda
+                                <strong>Duração:</strong> 4 a 8 horas
                             </div>
                             <div class="info-item">
-                                <strong>Material:</strong> Apostila inclusa
+                                <strong>Participantes:</strong> 6 a 12 pessoas
                             </div>
                             <div class="info-item">
-                                <strong>Certificado:</strong> Sim
+                                <strong>Material:</strong> Kits Lego inclusos
                             </div>
                         </div>
                     </div>
@@ -131,8 +143,8 @@
 
                 <div class="service-sidebar">
                     <div class="purchase-card">
-                        <h3>Adquira seu Curso</h3>
-                        <p>Inicie sua jornada de cura e autoconhecimento através do Reiki</p>
+                        <h3>Experimente o Lego Serious Play</h3>
+                        <p>Transforme sua equipe através da metodologia mais inovadora</p>
                         <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary btn-full">Adquirir Agora</a>
                         <div class="contact-info">
                             <p>Dúvidas? Entre em contato:</p>
@@ -143,12 +155,12 @@
                     </div>
 
                     <div class="instructor-card">
-                        <h3>Seu Instrutor</h3>
+                        <h3>Seu Facilitador Certificado</h3>
                         <div class="instructor-info">
                             <div class="instructor-avatar"></div>
                             <div class="instructor-details">
                                 <h4>Marcos Eduardo</h4>
-                                <p>Especialista em desenvolvimento humano com mais de 28 anos de experiência</p>
+                                <p>Facilitador certificado em Lego Serious Play Methods com vasta experiência</p>
                             </div>
                         </div>
                     </div>
@@ -162,20 +174,20 @@
         <div class="container">
             <h2>Outros Serviços</h2>
             <div class="related-grid">
-                <a href="mandala.html" class="related-card">
-                    <div class="related-icon">🌸</div>
-                    <h3>Mandala Terapêutica</h3>
-                    <p>Terapia através de mandalas sagradas</p>
+                <a href="desenvolvimento.html" class="related-card">
+                    <div class="related-icon">👥</div>
+                    <h3>Desenvolvimento de Lideranças</h3>
+                    <p>Líderes conscientes para o futuro</p>
                 </a>
-                <a href="jornada.html" class="related-card">
-                    <div class="related-icon">🌙</div>
-                    <h3>Jornada da Alma</h3>
-                    <p>Autoconhecimento através do Maha Lilah</p>
+                <a href="freshbiz.html" class="related-card">
+                    <div class="related-icon">🎮</div>
+                    <h3>FreshBiz Game</h3>
+                    <p>Simulação multidimensional de negócios</p>
                 </a>
-                <a href="astrologia.html" class="related-card">
-                    <div class="related-icon">⭐</div>
-                    <h3>Astrologia</h3>
-                    <p>Mergulho interior através dos astros</p>
+                <a href="points.html" class="related-card">
+                    <div class="related-icon">📸</div>
+                    <h3>Points of You</h3>
+                    <p>Fototerapia e reflexão</p>
                 </a>
             </div>
         </div>
@@ -201,4 +213,3 @@
     <script src="../js/whatsapp-widget.js"></script>
 </body>
 </html>
-
