--- a/html/miracle.html
+++ b/html/miracle.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Reiki</title>
-    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.">
+    <title>Vivência com o Jogo Miracle Choice</title>
+    <meta name="description" content="O poder da escolha através de um jogo transformador de consciência baseado em Um Curso em Milagres.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -42,13 +42,13 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/reiki_1.jpg" alt="Reiki" class="hero-bg-image">
+            <img src="../assets/images/jogo_maha_lilah.jpg" alt="Miracle Choice" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
-                <div class="service-icon-large">🧘</div>
-                <h1 class="service-hero-title">Curso de Reiki</h1>
-                <p class="service-hero-subtitle">Aprenda a técnica milenar de cura energética e autoconhecimento</p>
+                <div class="service-icon-large">✨</div>
+                <h1 class="service-hero-title">Vivência com o Jogo Miracle Choice</h1>
+                <p class="service-hero-subtitle">O poder da escolha através de um jogo transformador de consciência</p>
                 <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary">Adquirir Agora</a>
             </div>
         </div>
@@ -59,71 +59,71 @@
         <div class="container">
             <div class="service-content">
                 <div class="service-description">
-                    <h2>O que é o Reiki?</h2>
+                    <h2>Vivencie o Poder de Escolhas Conscientes</h2>
                     <p>
-                        O Reiki é uma técnica japonesa de cura energética que promove o relaxamento, reduz o estresse e facilita a cura através da imposição das mãos. Esta prática milenar trabalha com a energia vital universal, ajudando a equilibrar os centros energéticos do corpo e promovendo o bem-estar físico, mental e espiritual.
+                        O Miracle Choice é um jogo transformador baseado nos princípios de "Um Curso em Milagres" que convida você a explorar o poder das suas escolhas conscientes. Através de um tabuleiro dinâmico e cartas inspiradoras, você embarcará em uma jornada de autoconhecimento que revela como suas decisões moldam sua realidade. O jogo oferece insights profundos sobre necessidades, relacionamentos, identidade e o poder dos milagres em sua vida.
                     </p>
                     
-                    <h3>O que você vai aprender:</h3>
+                    <h3>Como Funciona o Jogo:</h3>
                     <div class="benefits-grid">
                         <div class="benefit-item">
-                            <div class="benefit-icon">⚡</div>
-                            <h4>Fundamentos do Reiki</h4>
-                            <p>História, princípios e filosofia da técnica</p>
+                            <div class="benefit-icon">🎯</div>
+                            <h4>Intenção de Jogo</h4>
+                            <p>Você escolhe uma intenção específica para receber insights relevantes</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🙏</div>
-                            <h4>Técnicas de Aplicação</h4>
-                            <p>Posições das mãos e métodos de canalização</p>
+                            <div class="benefit-icon">🎲</div>
+                            <h4>Seis Casas Temáticas</h4>
+                            <p>Necessidades, Corpo, Relacionamento, Identidade, Escolha e Milagres</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🌟</div>
-                            <h4>Autoaplicação</h4>
-                            <p>Como aplicar Reiki em si mesmo</p>
+                            <div class="benefit-icon">🃏</div>
+                            <h4>Cartas Inspiradoras</h4>
+                            <p>Mensagens especiais e citações de Um Curso em Milagres</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">🌍</div>
+                            <h4>Mundo Real</h4>
+                            <p>Centro do tabuleiro onde você integra os aprendizados</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">👥</div>
+                            <h4>Flexibilidade</h4>
+                            <p>Pode ser jogado sozinho ou em grupos de qualquer tamanho</p>
                         </div>
                         <div class="benefit-item">
                             <div class="benefit-icon">💫</div>
-                            <h4>Aplicação em Outros</h4>
-                            <p>Técnicas para ajudar familiares e amigos</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">🧘‍♀️</div>
-                            <h4>Meditação e Centramento</h4>
-                            <p>Práticas para fortalecer a conexão energética</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">📜</div>
-                            <h4>Certificação</h4>
-                            <p>Certificado de conclusão do curso</p>
+                            <h4>Transformação</h4>
+                            <p>Cada jogada oferece oportunidades de crescimento pessoal</p>
                         </div>
                     </div>
 
-                    <h3>Benefícios do Reiki:</h3>
+                    <h3>Benefícios da Vivência:</h3>
                     <ul class="benefits-list">
-                        <li>Redução do estresse e ansiedade</li>
-                        <li>Melhora da qualidade do sono</li>
-                        <li>Alívio de dores e tensões</li>
-                        <li>Fortalecimento do sistema imunológico</li>
-                        <li>Equilíbrio emocional</li>
-                        <li>Desenvolvimento da intuição</li>
-                        <li>Maior conexão espiritual</li>
-                        <li>Autoconhecimento profundo</li>
+                        <li>Maior clareza sobre suas escolhas de vida</li>
+                        <li>Desenvolvimento da consciência espiritual</li>
+                        <li>Compreensão profunda dos seus padrões</li>
+                        <li>Fortalecimento da intuição</li>
+                        <li>Melhoria nos relacionamentos</li>
+                        <li>Conexão com seu propósito maior</li>
+                        <li>Transformação de crenças limitantes</li>
+                        <li>Experiência de paz interior</li>
                     </ul>
 
                     <div class="course-info">
-                        <h3>Informações do Curso:</h3>
+                        <h3>Informações da Vivência:</h3>
                         <div class="info-grid">
                             <div class="info-item">
                                 <strong>Modalidade:</strong> Presencial e Online
                             </div>
                             <div class="info-item">
-                                <strong>Duração:</strong> Consulte agenda
+                                <strong>Duração:</strong> 3 horas
                             </div>
                             <div class="info-item">
-                                <strong>Material:</strong> Apostila inclusa
+                                <strong>Formato:</strong> Individual ou Grupo
                             </div>
                             <div class="info-item">
-                                <strong>Certificado:</strong> Sim
+                                <strong>Criador:</strong> James Kelly
                             </div>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
 
                 <div class="service-sidebar">
                     <div class="purchase-card">
-                        <h3>Adquira seu Curso</h3>
-                        <p>Inicie sua jornada de cura e autoconhecimento através do Reiki</p>
+                        <h3>Experimente o Miracle Choice</h3>
+                        <p>Descubra o poder transformador das suas escolhas conscientes</p>
                         <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary btn-full">Adquirir Agora</a>
                         <div class="contact-info">
                             <p>Dúvidas? Entre em contato:</p>
@@ -143,12 +143,12 @@
                     </div>
 
                     <div class="instructor-card">
-                        <h3>Seu Instrutor</h3>
+                        <h3>Seu Facilitador</h3>
                         <div class="instructor-info">
                             <div class="instructor-avatar"></div>
                             <div class="instructor-details">
                                 <h4>Marcos Eduardo</h4>
-                                <p>Especialista em desenvolvimento humano com mais de 28 anos de experiência</p>
+                                <p>Facilitador experiente em jogos de autoconhecimento e desenvolvimento espiritual</p>
                             </div>
                         </div>
                     </div>
@@ -162,20 +162,20 @@
         <div class="container">
             <h2>Outros Serviços</h2>
             <div class="related-grid">
-                <a href="mandala.html" class="related-card">
-                    <div class="related-icon">🌸</div>
-                    <h3>Mandala Terapêutica</h3>
-                    <p>Terapia através de mandalas sagradas</p>
-                </a>
                 <a href="jornada.html" class="related-card">
                     <div class="related-icon">🌙</div>
                     <h3>Jornada da Alma</h3>
                     <p>Autoconhecimento através do Maha Lilah</p>
                 </a>
-                <a href="astrologia.html" class="related-card">
-                    <div class="related-icon">⭐</div>
-                    <h3>Astrologia</h3>
-                    <p>Mergulho interior através dos astros</p>
+                <a href="transformacao.html" class="related-card">
+                    <div class="related-icon">🔄</div>
+                    <h3>Jogo da Transformação</h3>
+                    <p>Instrumento de autoconhecimento</p>
+                </a>
+                <a href="points.html" class="related-card">
+                    <div class="related-icon">📸</div>
+                    <h3>Points of You</h3>
+                    <p>Fototerapia e reflexão</p>
                 </a>
             </div>
         </div>
@@ -201,4 +201,3 @@
     <script src="../js/whatsapp-widget.js"></script>
 </body>
 </html>
-
