--- a/html/points.html
+++ b/html/points.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de Reiki</title>
-    <meta name="description" content="Aprenda a técnica milenar de cura energética e autoconhecimento através do Reiki.">
+    <title>Vivência Fototerapia com o Points of You</title>
+    <meta name="description" content="Um convite para a pausa e reflexão através da fotolinguagem e facilitação do diálogo.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/service-page.css">
     <link rel="stylesheet" href="../css/whatsapp-widget.css">
@@ -42,13 +42,13 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/reiki_1.jpg" alt="Reiki" class="hero-bg-image">
+            <img src="../assets/images/mentoria_1.jpg" alt="Points of You" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
-                <div class="service-icon-large">🧘</div>
-                <h1 class="service-hero-title">Curso de Reiki</h1>
-                <p class="service-hero-subtitle">Aprenda a técnica milenar de cura energética e autoconhecimento</p>
+                <div class="service-icon-large">📸</div>
+                <h1 class="service-hero-title">Vivência Fototerapia com o Points of You</h1>
+                <p class="service-hero-subtitle">Um convite para a pausa e reflexão através da fotolinguagem</p>
                 <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary">Adquirir Agora</a>
             </div>
         </div>
@@ -59,71 +59,76 @@
         <div class="container">
             <div class="service-content">
                 <div class="service-description">
-                    <h2>O que é o Reiki?</h2>
+                    <h2>Points Of You - Um Convite para a Pausa</h2>
                     <p>
-                        O Reiki é uma técnica japonesa de cura energética que promove o relaxamento, reduz o estresse e facilita a cura através da imposição das mãos. Esta prática milenar trabalha com a energia vital universal, ajudando a equilibrar os centros energéticos do corpo e promovendo o bem-estar físico, mental e espiritual.
+                        O Points of You é uma metodologia inovadora que utiliza a fotolinguagem para facilitar o diálogo e promover reflexões profundas. Através de imagens cuidadosamente selecionadas e sons inspiradores, criamos um espaço seguro para olhar para si, para o outro e para o mundo. Esta vivência oferece um momento de pausa necessário em nossas vidas aceleradas, permitindo que nos reconectemos conosco mesmos e com nossos times através da empatia e do autoconhecimento.
                     </p>
                     
-                    <h3>O que você vai aprender:</h3>
+                    <h3>Elementos da Metodologia:</h3>
                     <div class="benefits-grid">
                         <div class="benefit-item">
-                            <div class="benefit-icon">⚡</div>
-                            <h4>Fundamentos do Reiki</h4>
-                            <p>História, princípios e filosofia da técnica</p>
-                        </div>
-                        <div class="benefit-item">
-                            <div class="benefit-icon">🙏</div>
-                            <h4>Técnicas de Aplicação</h4>
-                            <p>Posições das mãos e métodos de canalização</p>
+                            <div class="benefit-icon">⏸️</div>
+                            <h4>Pausa</h4>
+                            <p>Momento de desaceleração e introspecção</p>
                         </div>
                         <div class="benefit-item">
                             <div class="benefit-icon">🌟</div>
-                            <h4>Autoaplicação</h4>
-                            <p>Como aplicar Reiki em si mesmo</p>
+                            <h4>Expansão</h4>
+                            <p>Ampliação da perspectiva e consciência</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">💫</div>
-                            <h4>Aplicação em Outros</h4>
-                            <p>Técnicas para ajudar familiares e amigos</p>
+                            <div class="benefit-icon">🎯</div>
+                            <h4>Foco</h4>
+                            <p>Direcionamento da atenção para o essencial</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">🧘‍♀️</div>
-                            <h4>Meditação e Centramento</h4>
-                            <p>Práticas para fortalecer a conexão energética</p>
+                            <div class="benefit-icon">📷</div>
+                            <h4>Fotolinguagem</h4>
+                            <p>Comunicação através de imagens poderosas</p>
                         </div>
                         <div class="benefit-item">
-                            <div class="benefit-icon">📜</div>
-                            <h4>Certificação</h4>
-                            <p>Certificado de conclusão do curso</p>
+                            <div class="benefit-icon">💬</div>
+                            <h4>Facilitação do Diálogo</h4>
+                            <p>Conversas mais profundas e significativas</p>
+                        </div>
+                        <div class="benefit-item">
+                            <div class="benefit-icon">⚡</div>
+                            <h4>Ação</h4>
+                            <p>Transformação de insights em ações concretas</p>
                         </div>
                     </div>
 
-                    <h3>Benefícios do Reiki:</h3>
+                    <h3>O que a Vivência Proporciona:</h3>
+                    <p>
+                        Um momento de pausa para olhar para si, para o outro e para o mundo. A partir de imagens e sons, criamos espaço para refletir, compartilhar e se reconectar — consigo mesmo e com o time — por meio da empatia. O resultado é a soma de forças que nasce das relações de confiança, fortalecendo um grupo unido, em sintonia e pronto para agir com mais presença e propósito.
+                    </p>
+
+                    <h3>Benefícios da Vivência:</h3>
                     <ul class="benefits-list">
+                        <li>Desenvolvimento da inteligência emocional</li>
+                        <li>Melhoria na comunicação interpessoal</li>
+                        <li>Fortalecimento da empatia e conexão</li>
+                        <li>Clareza sobre objetivos e propósitos</li>
                         <li>Redução do estresse e ansiedade</li>
-                        <li>Melhora da qualidade do sono</li>
-                        <li>Alívio de dores e tensões</li>
-                        <li>Fortalecimento do sistema imunológico</li>
-                        <li>Equilíbrio emocional</li>
-                        <li>Desenvolvimento da intuição</li>
-                        <li>Maior conexão espiritual</li>
-                        <li>Autoconhecimento profundo</li>
+                        <li>Aumento da criatividade e inovação</li>
+                        <li>Melhoria no trabalho em equipe</li>
+                        <li>Desenvolvimento da presença e mindfulness</li>
                     </ul>
 
                     <div class="course-info">
-                        <h3>Informações do Curso:</h3>
+                        <h3>Informações da Vivência:</h3>
                         <div class="info-grid">
                             <div class="info-item">
                                 <strong>Modalidade:</strong> Presencial e Online
                             </div>
                             <div class="info-item">
-                                <strong>Duração:</strong> Consulte agenda
+                                <strong>Duração:</strong> 2 a 4 horas
                             </div>
                             <div class="info-item">
-                                <strong>Material:</strong> Apostila inclusa
+                                <strong>Formato:</strong> Individual ou Grupo
                             </div>
                             <div class="info-item">
-                                <strong>Certificado:</strong> Sim
+                                <strong>Material:</strong> Cartas Points of You
                             </div>
                         </div>
                     </div>
@@ -131,8 +136,8 @@
 
                 <div class="service-sidebar">
                     <div class="purchase-card">
-                        <h3>Adquira seu Curso</h3>
-                        <p>Inicie sua jornada de cura e autoconhecimento através do Reiki</p>
+                        <h3>Faça uma Pausa Transformadora</h3>
+                        <p>Reconecte-se consigo mesmo e com sua equipe através da fotolinguagem</p>
                         <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-primary btn-full">Adquirir Agora</a>
                         <div class="contact-info">
                             <p>Dúvidas? Entre em contato:</p>
@@ -143,12 +148,12 @@
                     </div>
 
                     <div class="instructor-card">
-                        <h3>Seu Instrutor</h3>
+                        <h3>Seu Facilitador</h3>
                         <div class="instructor-info">
                             <div class="instructor-avatar"></div>
                             <div class="instructor-details">
                                 <h4>Marcos Eduardo</h4>
-                                <p>Especialista em desenvolvimento humano com mais de 28 anos de experiência</p>
+                                <p>Facilitador experiente em Points of You e metodologias de autoconhecimento</p>
                             </div>
                         </div>
                     </div>
@@ -162,20 +167,20 @@
         <div class="container">
             <h2>Outros Serviços</h2>
             <div class="related-grid">
-                <a href="mandala.html" class="related-card">
-                    <div class="related-icon">🌸</div>
-                    <h3>Mandala Terapêutica</h3>
-                    <p>Terapia através de mandalas sagradas</p>
+                <a href="coaching.html" class="related-card">
+                    <div class="related-icon">🎯</div>
+                    <h3>Coaching e Mentoria</h3>
+                    <p>Transformação com propósito</p>
                 </a>
-                <a href="jornada.html" class="related-card">
-                    <div class="related-icon">🌙</div>
-                    <h3>Jornada da Alma</h3>
-                    <p>Autoconhecimento através do Maha Lilah</p>
+                <a href="comunicacao.html" class="related-card">
+                    <div class="related-icon">💬</div>
+                    <h3>Comunicação Assertiva</h3>
+                    <p>Praticando a escuta empática</p>
                 </a>
-                <a href="astrologia.html" class="related-card">
-                    <div class="related-icon">⭐</div>
-                    <h3>Astrologia</h3>
-                    <p>Mergulho interior através dos astros</p>
+                <a href="lego.html" class="related-card">
+                    <div class="related-icon">🧩</div>
+                    <h3>Lego Serious Play</h3>
+                    <p>Metodologia criativa e inovadora</p>
                 </a>
             </div>
         </div>
@@ -201,4 +206,3 @@
     <script src="../js/whatsapp-widget.js"></script>
 </body>
 </html>
-
