--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Constelar - Desenvolvimento Humano</title>
-    <meta name="description" content="Constelar Desenvolvimento Humano - Autoconhecimento e transformação através de metodologias ativas, coaching e jogos de desenvolvimento pessoal.">
+    <title>Desenvolvimento Humano</title>
+    <meta name="description" content="Desenvolvimento Humano - Autoconhecimento e transformação através de metodologias ativas, coaching e jogos de desenvolvimento pessoal.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fixes.css">
     <link rel="stylesheet" href="css/whatsapp-widget.css">
+    <link rel="stylesheet" href="css/mobile-social.css">
 
 </head>
 <body>
@@ -16,7 +17,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="assets/images/logotipo.png" alt="Constelar" class="logo">
+                    <img src="assets/images/logotipo.png" alt="" class="logo">
                     <span class="logo-text"></span>
                 </div>
                 <ul class="nav-menu">
@@ -179,6 +180,60 @@
                     <a href="html/transformacao.html" class="service-link">Saiba Mais</a>
                     <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-purchase">Adquirir</a>
                 </div>
+
+                <!-- Service 13: Coaching e Mentoria -->
+                <div class="service-card" data-service="coaching">
+                    <div class="service-icon"><img src="assets/images/coaching_1.jpg" alt="Coaching e Mentoria"></div>
+                    <h3 class="service-title">Coaching e Mentoria</h3>
+                    <p class="service-description">Transformação com propósito e presença através de processos personalizados.</p>
+                    <a href="html/coaching.html" class="service-link">Saiba Mais</a>
+                    <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-purchase">Adquirir</a>
+                </div>
+
+                <!-- Service 14: Desenvolvimento de Lideranças -->
+                <div class="service-card" data-service="desenvolvimento">
+                    <div class="service-icon"><img src="assets/images/desenvolvimento_pessoal_1.jpg" alt="Desenvolvimento de Lideranças"></div>
+                    <h3 class="service-title">Programa de Desenvolvimento de Lideranças</h3>
+                    <p class="service-description">Líderes conscientes para um futuro colaborativo e sustentável.</p>
+                    <a href="html/desenvolvimento.html" class="service-link">Saiba Mais</a>
+                    <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-purchase">Adquirir</a>
+                </div>
+
+                <!-- Service 15: Miracle Choice -->
+                <div class="service-card" data-service="miracle">
+                    <div class="service-icon"><img src="assets/images/jogo_maha_lilah.jpg" alt="Miracle Choice"></div>
+                    <h3 class="service-title">Vivência com o Jogo Miracle Choice</h3>
+                    <p class="service-description">O poder da escolha através de um jogo transformador de consciência.</p>
+                    <a href="html/miracle.html" class="service-link">Saiba Mais</a>
+                    <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-purchase">Adquirir</a>
+                </div>
+
+                <!-- Service 16: Lego Serious Play -->
+                <div class="service-card" data-service="lego">
+                    <div class="service-icon"><img src="assets/images/lideranca_novos_lideres.jpg" alt="Lego Serious Play"></div>
+                    <h3 class="service-title">Metodologia Lego Serious Play Methods</h3>
+                    <p class="service-description">Desenvolvendo e engajando pessoas de forma criativa e inovadora.</p>
+                    <a href="html/lego.html" class="service-link">Saiba Mais</a>
+                    <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-purchase">Adquirir</a>
+                </div>
+
+                <!-- Service 17: Points of You -->
+                <div class="service-card" data-service="points">
+                    <div class="service-icon"><img src="assets/images/mentoria_1.jpg" alt="Points of You"></div>
+                    <h3 class="service-title">Vivência Fototerapia com o Points of You</h3>
+                    <p class="service-description">Um convite para a pausa e reflexão através da fotolinguagem.</p>
+                    <a href="html/points.html" class="service-link">Saiba Mais</a>
+                    <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-purchase">Adquirir</a>
+                </div>
+
+                <!-- Service 18: Comunicação Assertiva -->
+                <div class="service-card" data-service="comunicacao">
+                    <div class="service-icon"><img src="assets/images/perfil_comportamental.jpg" alt="Comunicação Assertiva"></div>
+                    <h3 class="service-title">Workshop Comunicação Assertiva e Não Violenta</h3>
+                    <p class="service-description">Praticando a escuta empática e comunicação consciente.</p>
+                    <a href="html/comunicacao.html" class="service-link">Saiba Mais</a>
+                    <a href="https://loja.infinitepay.io/constelar" target="_blank" class="btn btn-purchase">Adquirir</a>
+                </div>
             </div>
         </div>
     </section>
@@ -187,13 +242,12 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2 class="section-title">Sobre a Constelar</h2>
+                    <h2 class="section-title">Sobre</h2>
                     <p class="about-description">
                         A Constelar nasceu no ano de 2017 com a missão de levar o autoconhecimento e autodesenvolvimento para dentro da vida de cada ser humano por meio de soluções criativas, metodologias ativas e gamificação atendendo tanto o ambiente corporativo quanto o pessoal.
                     </p>
                     <p class="about-description">
-                        O propósito da Constelar Desenvolvimento Humano é inspirar, apoiar e encorajar pessoas e empresas em seus processos de mudança e transformação, tornando-as mais conscientes de suas potencialidades e dos seus desafios para que possam encontrar o seu lugar, essência e propósito.
-                    </p>
+                    O propósito do Desenvolvimento Humano é inspirar, apoiar e encorajar pessoas e empresas em seus processos de mudança e transformação, tornando-as mais conscientes de suas potencialidades e dos seus desafios para que possam encontrar o seu lugar, essência e propósito.               </p>
                     <div class="excellence-keys">
                         <h3>Chaves da Excelência</h3>
                         <div class="keys-grid">
@@ -383,12 +437,12 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/images/logotipo.png" alt="Constelar" class="logo">
+                    <img src="assets/images/logotipo.png" alt="" class="logo">
                     <span class="logo-text"></span>
                 </div>
                 <div class="footer-text">
                     <p>CNPJ 27.345.001/0001-24</p>
-                    <p>&copy; 2017 MARCOS EDUARDO DOS SANTOS PEREIRA - TODOS OS DIREITOS RESERVADOS</p>
+                    <p>&copy; 2024 TODOS OS DIREITOS RESERVADOS</p>
                     <p>Desenvolvido por Eduardo Tertuliano - ClickStorm <a href="https://wa.me/5511987838439">11 98783-8439</a></p>
                 </div>
             </div>
